# GripDL

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  SETUP.md
app/: index.html  package.json  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: downloader.rs  lib.rs  main.rs  native_messaging.rs  persistence.rs  state.rs
app/src/components/: DownloadItem.tsx  DownloadList.tsx
extension/: manifest.json  package.json  tsconfig.json
extension/src/: background.ts
scripts/: register-native-messaging.ps1  register-native-messaging.sh
