[package]
name = "gripdl"
version = "0.1.0"
description = "macOS Download Manager"
authors = ["GripDL Contributors"]
license = "AGPL-3.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["cookies", "json"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
futures = "0.3"
bytes = "1.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "gripdl-native-messaging"
path = "src/bin/native-messaging-host.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

